--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,7 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        
         {
             "name": "Listen for rdebug-ide",
             "type": "Ruby",
@@ -16,9 +17,8 @@
             "name": "Debug Local File",
             "type": "Ruby",
             "request": "launch",
-            "program": "${workspaceRoot}/main.rb"
+            "program": "${workspaceRoot}/command_line_interface.rb"
         },
         
-        null
     ]
 }
